// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays correct hint at level 0 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "width": 750,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "position": "absolute",
        "top": 934,
        "zIndex": 3,
      }
    }
  >
    Hint: 
    Pour marcher: Type ‘marcher’
  </Text>
</View>
`;

exports[`displays correct hint at level 1 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "width": 750,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "position": "absolute",
        "top": 934,
        "zIndex": 3,
      }
    }
  >
    Hint: 
    Pour ouvrir: Type 'ouvrir'
  </Text>
</View>
`;
